<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TicTacToe</string>
    <string name="leaderboard_file_name">leaderboard</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="settings">Settings</string>
    <string name="leaderboard_name">leaderboard</string>
    <string name="welcome_to_ttt">Welcome to a game of TicTacToe</string>
    <string name="leaderboard_header">Leaderboard</string>
    <string name="congratulations">Congratulations, %s, you won!</string>
    <string name="draw_result">It was a draw :-(</string>
    <string name="victories_leaderboard">%1$d victories, in %2$d matches (%3$d%%)</string>
    <string name="whos_turn">%s\'s turn</string>
    <string name="default_name1">John Doe</string>
    <string name="default_name2">Jane Doe</string>
    <string name="btn_change_names">Change Names</string>
    <string name="btn_purge_leader">Purge Leaderboard</string>
    <string name="btn_reset">Reset to Defaults</string>
    <string name="name_of_player_1">Enter name of player 1</string>
    <string name="name_of_player_2">Enter name of player 2</string>
    <string name="name_setter_message">Please set the name of the players</string>
    <string name="name_setter_title">Change Names</string>
    <string name="pref_key_name1">namePlayer1</string>
    <string name="pref_key_name2">namePlayer2</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="game_result_win">WIN</string>
    <string name="game_result_loss">LOSS</string>
    <string name="game_result_draw">DRAW</string>
    <string name="result_history">Result History - %s</string>
    <string name="rematch">Rematch</string>
    <string name="go_to_leaderboard">Go to Leaderboard</string>
    <string name="post_game">Post Game</string>
    <string name="saving_leaderboard">Saving game-result to memory.\nPlease wait…</string>
    <string name="vs">VS</string>
    <string name="load_game">Load Game</string>
    <string name="saved_game_tip">There is a saved game. Do you want to overwrite it?</string>
    <string name="saved_game_indic">savedGame</string>
    <string name="winner_text">%s won the game!</string>
    <string name="draw_text">The game ended in a draw</string>
</resources>
